# HiSpark_MeetingProject

./: .gitignore  LICENSE.OpenSource  README.md
src/middleware/services/srv_tiot_host/: CMakeLists.txt  Kconfig  tiot_release.cmake  ws63_port.cmake
src/middleware/services/srv_tiot_host/tiot_driver/: CMakeLists.txt  Kconfig
src/middleware/services/srv_tiot_host/tiot_driver/common/: CMakeLists.txt
src/middleware/services/srv_tiot_host/tiot_driver/common/controller/: CMakeLists.txt  tiot_controller.c  tiot_controller.h  tiot_controller_helper.h  tiot_device_info.h
src/middleware/services/srv_tiot_host/tiot_driver/common/fw_load/: CMakeLists.txt  tiot_firmware.c  tiot_firmware.h  tiot_firmware_utils.h
src/middleware/services/srv_tiot_host/tiot_driver/common/interface/: CMakeLists.txt
src/middleware/services/srv_tiot_host/tiot_driver/common/libboundscheck/: CMakeLists.txt
src/middleware/services/srv_tiot_host/tiot_driver/common/pm/: CMakeLists.txt  tiot_pm.c  tiot_pm.h  tiot_pm_wakelock.c  tiot_pm_wakelock.h
src/middleware/services/srv_tiot_host/tiot_driver/common/sys_msg_handler/: tiot_sys_msg_handle.c  tiot_sys_msg_handle.h  tiot_sys_msg_types.h
src/middleware/services/srv_tiot_host/tiot_driver/common/transfer/: Kconfig  tiot_xfer.c  tiot_xfer.h  tiot_xfer_utils.c  tiot_xfer_utils.h
src/middleware/services/srv_tiot_host/tiot_driver/common/utils/: CMakeLists.txt  tiot_errcode.h  tiot_types.h
src/middleware/services/srv_tiot_host/tiot_driver/device/w33/: CMakeLists.txt  Kconfig  Makefile  w33_dev_customize.c  w33_dev_customize.h  w33_device_info.c  w33_device_info.h  w33_service.c  w33_service.h
src/middleware/services/srv_tiot_host/tiot_driver/product_porting/common/: tiot_board_log_port.h  tiot_board_misc_port.c  tiot_board_pin_port.c  tiot_board_uart_port.c  w33_board_port.c
src/middleware/services/srv_tiot_host/tiot_driver/product_porting/ws63_w33_evb/: CMakeLists.txt  tiot_autoconfig.h  tiot_board_misc_port_config.h  tiot_board_pin_port_config.h  (+3 more)
(+1143 files in other folders)
